# haskell_book

./: .gitignore  FunctionWithLet.hs  FunctionWithWhere.hs  HelloHaskell1.hs  LetToWhere.hs  Print2.hs  Print3.hs  TopOrLocal.hs  cipher.hs  test.hs
10_folding_lists/: exercises.md  main.hs
11_algebraic_data_types/: binTree.hs  exercises.md  main.hs
11_algebraic_data_types/CH11/: .gitignore  ChangeLog.md  README.md  package.yaml
12_signaling_adversity/: exercises.md  main.hs
13_modules/: ciphers.hs  exercises.md  makePerson.hs  palindrome.hs
13_modules/hangman/: LICENSE  hangman.cabal
13_modules/hangman/src/: Main.hs
13_modules/hello/: hello.cabal
14_testing/morse/: package.yaml  stack.yaml
14_testing/testing-tests/: .gitignore  ChangeLog.md  README.md  package.yaml
15_monoid_semigroup/: exercise.hs  exercise.md  madlibbin.hs  maybeAnotherMonoid.hs
15_monoid_semigroup/monoid/: package.yaml
16_functor/: exercises.md
16_functor/functors/: .gitignore  ChangeLog.md  package.yaml
17_applicative/applicative/: .gitignore  README.md  package.yaml
18_monad/monad/: .gitignore  ChangeLog.md  package.yaml
20_foldable/fold/: .gitignore  README.md  package.yaml
21_traversable/traverse/: .gitignore  ChangeLog.md  package.yaml  (+1 more)
3_strings/: chapterExercises.hs  questions.md
4_datatypes/: exercises.hs  exercises.md
5_types/: exercises.md
6_type_classes/: exercises.md  main.hs  questions.md
7_functional_patterns/: arith4.hs  exercises.md  main.hs
8_recursion/: exercises.md  main.hs
9_list/: exercises.md  main.hs  wordsAndLinesNaive.hs
(+98 files in other folders)
