name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/jonathanlorimer/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Lorimer
maintainer:          jonathan_lorimer@mac.com
copyright:           2019 Jonathan Lorimer
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                        , random
                        , split
